bitbybit-tests/tests/ui/ranges_attribute_no_ranges.stderr
error: custom attribute panicked
 --> tests/ui/ranges_attribute_no_ranges.rs:3:1
  |
3 | #[bitenum(u8, exhaustive: false)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: bitenum!: `ranges` attribute for RangeVariant1 has no arguments
